[package]
name = "dgc-lib"
version = "0.1.0"
authors = ["Mauro Mandracchia <mauromandracchia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-nitro-enclaves-cose = "0.2.0"
base45 = "2.0.1"
cbor = "0.4.1"
clap = { version = "3.0.0-beta.2", features = ["yaml"] } 
cose = "0.1.4"
deflate = "0.9.1"
flate2 = "1.0.20"
inflate = "0.4.5"
openssl = "0.10.32"
serde = "1.0.125"
serde_cbor = "0.11.1"
serde_cose = "0.1.4"
serde_json = "1.0.64"
wasm-bindgen = "0.2.74"
